[package]
name = "txmodems"
readme = "README.md"
repository = "https://github.com/Cosmo-CoDiOS/txmodems"
description = "Rust library for various MODEM file transfer protocols"
categories = ["embedded"]
keywords = ["data-transfer", "MODEM", "file-transfer", "embedded"]
version = "0.2.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
license = "MIT"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
xmodem = []
ymodem = []
zmodem = []
no_alloc = ["heapless"]

[dependencies]
core2 = { version = "0.4.0", default-features = false }
crc16 = "0.4.0"
thiserror-no-std = "2.0.2"
anyhow = { version = "1.0.75", default-features = false }
heapless = { version = "0.8.0", optional = true }
